# RandomMelody

./: .gitignore  LICENSE  README.md  RandoMMelodyGenerator.py  requirements.txt  setup.cfg  setup.py
src/random_melody_generator.egg-info/: PKG-INFO  SOURCES.txt
src/random_melody_generator_dvir_alfi.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
src/random_melody_module/: random_melody_generator.py
src/randommelodygenerator.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
