[metadata]
name = random_melody_generator
version = 0.0.1
author = Dvir Alfi 
author_email = dviralafiprogram@gmail.com
description = provides a MIDI file that contains chords and melody, randomly composed.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/dviralfi/RandomMelody
project_urls =
    Bug Tracker = https://github.com/pypa/sampleproject/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages=find:
python_requires = >=3.6
install_requires = 
    midiutil==1.2.1

[options.packages.find]
where = src